adding description to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,8 @@
     <body>
         {{>header}}       
         <img src={{image}}>
+        <p>This is the about page. The weather app was created as part of a node course</p>
+
         {{>footer}}
     </body>
 </html>
